--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   padding: 20px;
 }
 .label {
-  border: 1px solid black;
+  border: 2px solid black;
   width: 4.25cm;
   height: 2.1cm;
   display: flex;
@@ -40,6 +40,6 @@
 
 @media print {
   .form-product {
-      visibility: hidden;
+    display: none;
   }
 }
